--- a/src/pages/fr/guides/images.mdx
+++ b/src/pages/fr/guides/images.mdx
@@ -76,7 +76,7 @@ Lorsque vous ajoutez des images dans un [composant de Framework UI](/fr/core-con
 ## Où stocker les images
 
 ### `src/`
-Vos images stockées dans `src/` peuvent être utilisées par des composants (`.astro`, `.mdx` et autres Frameworks UI) mais pas dans les fichiers Markdown. 
+Vos images stockées dans `src/` peuvent être utilisées par les composants (`.astro`, `.mdx` et autres Frameworks UI) mais pas dans les fichiers Markdown. 
 
 Nous recommendons de garder vos images dans [`public/`](#public) ou de les stocker [à distance](#using-images-from-a-cms-or-cdn) si vous devez utiliser des fichiers Markdown.
 
@@ -118,21 +118,21 @@ Après [avoir installé `@astrojs/image`](/fr/guides/integrations-guide/image/#i
 
 Le [composant Astro `<Image />`](/fr/guides/integrations-guide/image/#image-) vous permet d'optimiser une seule image et de spécifier sa largeur, hauteur, et/ou son rapport rapport largeur/hauteur. Vous pouvez même convertir votre image dans un format de sortie particulier.
 
-Ce composant est utile pour les images dont vous souhaitez qu'elles conservent une taille constante sur tous les écrans ou contrôler étroitement la qualité d'une image (ex: les logos).
+Ce composant est utile pour les images qui doivent conserver une taille constante sur tous les écrans ou pour contrôler étroitement la qualité d'une image (ex : les logos).
 
-Pour les images responsive, ou pour une direction artistique, utilisez à la place le composant `<Picture />`.
+Pour les images responsive, ou pour une direction artistique, utilisez plutôt le composant `<Picture />`.
 
 #### Images locales dans `src/`
 
 (attributs requis : [`src`](/fr/guides/integrations-guide/image/#src), et [`alt`](/fr/guides/integrations-guide/image/#alt))
 
-Importez vos images dans le Frontmatter et passez-les directement à l'attribut `src` du composant `<Image />`.
+Importez votre image dans le Frontmatter et passez-la directement à l'attribut `src` du composant `<Image />`.
 
-`alt` est requis, mais [toutes les autres propriétés](/fr/guides/integrations-guide/image/#image-) sont facultatives et prendront par défaut les propriétés d'origine du fichier image si elles ne sont pas fournies.
+`alt` est requis, mais [toutes les autres propriétés](/fr/guides/integrations-guide/image/#image-) sont facultatives et, si elles ne sont pas fournies, prendront par défaut les propriétés d'origine du fichier image.
 
 #### Images distantes
 
-(attributs requis: [`src`](/fr/guides/integrations-guide/image/#src), [`alt`](/fr/guides/integrations-guide/image/#alt), [`format`](/fr/guides/integrations-guide/image/#format), et dimensions)
+(attributs requis : [`src`](/fr/guides/integrations-guide/image/#src), [`alt`](/fr/guides/integrations-guide/image/#alt), [`format`](/fr/guides/integrations-guide/image/#format), et dimensions)
 
 Passez une URL complète à l'attribut `src` du composant `<Image />` et incluez une valeur pour `alt`.
 
@@ -144,14 +144,13 @@ Vous devez également fournir soit [`width`](/fr/guides/integrations-guide/image
 
 #### Images locales dans `public/`
 
-(attributs requis: [`src`](/fr/guides/integrations-guide/image/#src), [`alt`](/fr/guides/integrations-guide/image/#alt), [`format`](/fr/guides/integrations-guide/image/#format), et dimensions)
+(attributs requis : [`src`](/fr/guides/integrations-guide/image/#src), [`alt`](/fr/guides/integrations-guide/image/#alt), [`format`](/fr/guides/integrations-guide/image/#format), et dimensions)
 
 Passez un chemin relatif au répertoire publique à l'attribut `src` du composant `<Image />` et incluez une valeur pour `alt`.
 
-Elle sera traitée comme une image distante, ce qui nécessite à la fois [`width`](/fr/guides/integrations-guide/image/#width) et [`height`](/fr/guides/integrations-guide/image /#height), ou une dimension et un attribut [`aspectRatio`](/fr/guides/integrations-guide/image/#aspectratio).
+Elle sera traitée comme une image distante, ce qui nécessite à la fois [`width`](/fr/guides/integrations-guide/image/#width) et [`height`](/fr/guides/integrations-guide/image/#height), ou une dimension et un attribut [`aspectRatio`](/fr/guides/integrations-guide/image/#aspectratio).
 
-A value for the `format` attribute (e.g. png, avif) to transform your image is required.
-Une valeur pour l'attribut `format` (ex : png, avif) pour transformer votre image est requise
+Une valeur pour l'attribut `format` (ex : png, avif) est requise afin de transformer votre image.
 
 [Toutes les autres propriétés](/fr/guides/integrations-guide/image/#image-) sont facultatives.
 
@@ -169,7 +168,7 @@ const localAlt = "Le logo d'Astro";
 const remoteAlt = "Une vue en contre-plongée d'une forêt pendant la journée";
 ---
 
-<!-- Image locale optimisée, gardant la largeur, hauteur et format d'image originaux -->
+<!-- Image locale optimisée, gardant largeur, hauteur et format d'image originaux -->
 <Image src={localImage} alt={localAlt} />
 
 <!-- La hauteur sera recalculée pour correspondre au ratio d'aspect original -->
@@ -189,7 +188,7 @@ const remoteAlt = "Une vue en contre-plongée d'une forêt pendant la journée";
 <!-- les importations d'images locales peuvent également être directement intégrées -->
 <Image src={import('../assets/logo.png')} alt={localAlt}/>
 
-<!-- Si une image est stockée dans le dossier `/public`, utilisez son chemin relatif à `/public` -->
+<!-- Si une image est située dans le dossier `/public`, utilisez son chemin relatif à `/public` -->
 <Image src="/penguin.jpg" width="300" aspectRatio={1} format="png" alt="A happy penguin"/>
 ```
 
@@ -197,7 +196,7 @@ const remoteAlt = "Une vue en contre-plongée d'une forêt pendant la journée";
 
 Le [composant Astro `<Picture />`](/fr/guides/integrations-guide/image/#picture-) peut être utilisé pour fournir des images responsive sur votre site, y compris plusieurs tailles, formats et mises en page d'image.
 
-Vous pouvez laisser le navigateur de l'utilisateur choisir les tailles d'image, les résolutions et les types de fichiers appropriés en fonction de facteurs tels que la taille d'écran et la bande passante. Ou, vous pouvez spécifier des règles que le navigateur doit suivre en fonction des media queries.
+Vous pouvez laisser le navigateur de l'utilisateur choisir les tailles d'image, les résolutions et les types de fichiers appropriés en fonction de facteurs tels que la taille d'écran et la bande passante. Ou alors, vous pouvez spécifier des règles que le navigateur doit suivre en fonction des media queries.
 
 Ce composant est utile pour optimiser ce que votre utilisateur voit à différentes tailles d'écran, ou pour la direction artistique.
 
@@ -207,9 +206,9 @@ Consultez le guide de MDN pour plus d'informations sur [les images responsive et
 
 #### Images locales
 
-(attributs requis: [`src`](/fr/guides/integrations-guide/image/#src-1), [`widths`](/fr/guides/integrations-guide/image/#widths), [`sizes`](/fr/guides/integrations-guide/image/#sizes), [`alt`](/fr/guides/integrations-guide/image/#alt-1))
+(attributs requis : [`src`](/fr/guides/integrations-guide/image/#src-1), [`widths`](/fr/guides/integrations-guide/image/#widths), [`sizes`](/fr/guides/integrations-guide/image/#sizes), [`alt`](/fr/guides/integrations-guide/image/#alt-1))
 
-Importez votre image dans frontmatter et passez-la directement à l'attribut `src` du composant `<Picture />`.
+Importez votre image dans Frontmatter et passez-la directement à l'attribut `src` du composant `<Picture />`.
 
 Vous devez fournir au composant des indications sur les largeurs d'image et les tailles d'écran, mais [toutes les autres propriétés](/fr/guides/integrations-guide/image/#picture-) sont facultatives.
 
@@ -217,7 +216,7 @@ Par défaut, les [`formats`](/fr/guides/integrations-guide/image/#formats) du co
 
 #### Remote Images 
 
-(attributs requis: [`src`](/fr/guides/integrations-guide/image/#src-1), [`widths`](/fr/guides/integrations-guide/image/#widths), [`sizes`](/fr/guides/integrations-guide/image/#sizes), [`alt`](/fr/guides/integrations-guide/image/#alt-1), et [`aspectRatio`](/fr/guides/integrations-guide/image/#aspectratio-1))
+(attributs requis : [`src`](/fr/guides/integrations-guide/image/#src-1), [`widths`](/fr/guides/integrations-guide/image/#widths), [`sizes`](/fr/guides/integrations-guide/image/#sizes), [`alt`](/fr/guides/integrations-guide/image/#alt-1), et [`aspectRatio`](/fr/guides/integrations-guide/image/#aspectratio-1))
 
 Passez une URL complète à l'attribut `src` du composant `<Picture />`.
 
@@ -229,9 +228,9 @@ Bien que [`formats`](/fr/guides/integrations-guide/image/#formats) ne soit pas r
 
 #### Images locales dans `public/`
 
-(attributs requis: [`src`](/fr/guides/integrations-guide/image/#src-1), [`widths`](/fr/guides/integrations-guide/image/#widths), [`sizes`](/fr/guides/integrations-guide/image/#sizes), [`alt`](/fr/guides/integrations-guide/image/#alt-1), et [`aspectRatio`](/fr/guides/integrations-guide/image/#aspectratio-1))
+(attributs requis : [`src`](/fr/guides/integrations-guide/image/#src-1), [`widths`](/fr/guides/integrations-guide/image/#widths), [`sizes`](/fr/guides/integrations-guide/image/#sizes), [`alt`](/fr/guides/integrations-guide/image/#alt-1), et [`aspectRatio`](/fr/guides/integrations-guide/image/#aspectratio-1))
 
-Passez à l'attribut `src` du composant un chemin relatif au dossier public et incluez une valeur pour `alt`.
+Passez à l'attribut `src` du composant un chemin relatif au dossier publique et incluez une valeur pour `alt`.
 
 L'image sera traitée comme une image distante, donc une valeur pour `aspectRatio` est également requise pour s'assurer que la hauteur correcte puisse être calculée au moment du Build.
 
@@ -253,7 +252,7 @@ const remoteImage = 'https://www.google.com/images/branding/googlelogo/2x/google
 <!-- Image locale avec plusieurs tailles et formats -->
 <Picture src={localImage} widths={[200, 400, 800]} sizes="(max-width: 800px) 100vw, 800px" formats={['avif', 'jpeg', 'png', 'webp']} alt="The Astro logo" />
 
-<!-- Image distante (le ration d'aspect est requis) -->
+<!-- Image distante (le ratio d'aspect est requis) -->
 <Picture src={remoteImage} widths={[200, 400, 800]} aspectRatio="4:3" sizes="(max-width: 800px) 100vw, 800px" alt="Le logo Google" />
 
 <!-- Les images dans /public fonctionnent comme les images distantes -->
@@ -305,7 +304,7 @@ const {src, ...attrs} = Astro.props;
 
 ### Utilisation de `<img>` avec l'intégration d'image
 
-L'intégration d'image officielle modifiera les importations d'images pour renvoyer un objet plutôt qu'une chaîne source.
+L'intégration d'image officielle modifiera les importations d'images pour renvoyer un objet plutôt qu'une chaîne de caractères source.
 L'objet possède les propriétés suivantes, dérivées du fichier importé :
 ```ts
 {
@@ -325,7 +324,7 @@ import rocket from '../images/rocket.svg';
 <img src={rocket.src} alt="Une fusée dans l'espace."/>
 ```
 
-Une alternative consiste à ajouter `?url` à vos imports pour leur dire de renvoyer une chaîne source.
+Une alternative consiste à ajouter `?url` à vos imports pour leur dire de renvoyer une chaîne de caractères source.
 
 ```astro "?url"
 ---
@@ -348,7 +347,7 @@ Tous les utilisateurs ne peuvent pas voir les images de la même manière, l'acc
 
 Cet attribut est requis pour les composants `<Image />` et `<Picture />` de l'intégration d'image. Ces composants génèrent une erreur si aucun texte alternatif n'est fourni.
 
-Si l'image est simplement décorative (i.e. qu'elle ne contribue pas à la compréhension de la page), définissez `alt=""` pour que les lecteurs d'écran sachent ignorer l'image.
+Si l'image est simplement décorative (i.e. elle ne contribue pas à la compréhension de la page), définissez `alt=""` pour que les lecteurs d'écran sachent ignorer l'image.
 
 
 ## Intégrations Communautaires
