--- a/src/pages/fr/guides/images.mdx
+++ b/src/pages/fr/guides/images.mdx
@@ -28,9 +28,9 @@ import rocket from '../images/rocket.svg';
 
 ### Dans les fichiers Markdown
 
-Vou pouvez utiliser la syntaxe Markdown standard  `![]()` ou les balises HTML standard `<img>` dans vos fichiers `.md` pour les images situées dans votre dossier `public/`, ou pour les images distantes sur un autre serveur.
+Vous pouvez utiliser la syntaxe Markdown standard  `![]()` ou les balises HTML standard `<img>` dans vos fichiers `.md` pour les images situées dans votre dossier `public/`, ou pour les images distantes sur un autre serveur.
 
-Si vous ne pouvez pas garder vos images dans `public/`, nous vous recommendons d'utiliser le format de fichier `.mdx`, qui vous permet de combiner des composants importés avec une syntaxe semblable à celle de Markdown. Utilisez [l'intégration MDX](/fr/guides/integrations-guide/mdx/) pour ajouter le support de MDX à Astro.
+Si vous ne pouvez pas garder vos images dans `public/`, nous vous recommandons d'utiliser le format de fichier `.mdx`, qui vous permet de combiner des composants importés avec une syntaxe semblable à celle de Markdown. Utilisez [l'intégration MDX](/fr/guides/integrations-guide/mdx/) pour ajouter le support de MDX à Astro.
 
 ```md
 // src/pages/post-1.md
@@ -48,7 +48,7 @@ Si vous ne pouvez pas garder vos images dans `public/`, nous vous recommendons d
 
 ### Dans les fichiers MDX
 
-Vou pouvez utiliser la syntaxe Markdown standard `![]()` ou les balises JSX `<img />` dans vos fichiers `.mdx` pour afficher des images depuis votre dossier `public/` ou depuis un serveur distant.
+Vous pouvez utiliser la syntaxe Markdown standard `![]()` ou les balises JSX `<img />` dans vos fichiers `.mdx` pour afficher des images depuis votre dossier `public/` ou depuis un serveur distant.
 
 De plus, vous pouvez importer et utiliser des images situées dans votre répertoire de projet `src/`, comme vous le feriez dans des composants Astro.
 
@@ -69,7 +69,7 @@ import rocket from '../images/rocket.svg';
 <img src="https://astro.build/assets/logo.png" width="25" alt="Astro" />
 ```
 
-### Dans les Composants de Framwork UI
+### Dans les Composants de Framework UI
 
 Lorsque vous ajoutez des images dans un [composant de Framework UI](/fr/core-concepts/framework-components/) (ex : React, Svelte), utilisez la syntaxe des images appropriée pour ce Framework de composants particulier.
 
@@ -78,7 +78,7 @@ Lorsque vous ajoutez des images dans un [composant de Framework UI](/fr/core-con
 ### `src/`
 Vos images stockées dans `src/` peuvent être utilisées par les composants (`.astro`, `.mdx` et autres Frameworks UI) mais pas dans les fichiers Markdown. 
 
-Nous recommendons de garder vos images dans [`public/`](#public) ou de les stocker [à distance](#using-images-from-a-cms-or-cdn) si vous devez utiliser des fichiers Markdown.
+Nous recommandons de garder vos images dans [`public/`](#public) ou de les stocker [à distance](#using-images-from-a-cms-or-cdn) si vous devez utiliser des fichiers Markdown.
 
 Importez-les depuis un **chemin de fichier relatif** ou un [alias d'import](/fr/guides/aliases/) dans n'importe quel fichier composant et utilisez ensuite l'import comme attribut `src` de l'image.
 
@@ -140,13 +140,13 @@ Le composant `<Image />` ne peut pas déterminer le format de fichier d'origine 
 
 Vous devez également fournir soit [`width`](/fr/guides/integrations-guide/image/#width) et [`height`](/fr/guides/integrations-guide/image/#height), soit l'une des dimensions et un [`aspectRatio`](/fr/guides/integrations-guide/image/#aspectratio) pour éviter les décalages de mise en page du contenu car le composant `<Image />` ne connaît pas les dimensions d'une image distante.
 
-[Toutes les autre propriétés](/fr/guides/integrations-guide/image/#image-) sont facultatives.
+[Toutes les autres propriétés](/fr/guides/integrations-guide/image/#image-) sont facultatives.
 
 #### Images locales dans `public/`
 
 (attributs requis : [`src`](/fr/guides/integrations-guide/image/#src), [`alt`](/fr/guides/integrations-guide/image/#alt), [`format`](/fr/guides/integrations-guide/image/#format), et dimensions)
 
-Passez un chemin relatif au répertoire publique à l'attribut `src` du composant `<Image />` et incluez une valeur pour `alt`.
+Passez un chemin relatif au répertoire public à l'attribut `src` du composant `<Image />` et incluez une valeur pour `alt`.
 
 Elle sera traitée comme une image distante, ce qui nécessite à la fois [`width`](/fr/guides/integrations-guide/image/#width) et [`height`](/fr/guides/integrations-guide/image/#height), ou une dimension et un attribut [`aspectRatio`](/fr/guides/integrations-guide/image/#aspectratio).
 
@@ -230,7 +230,7 @@ Bien que [`formats`](/fr/guides/integrations-guide/image/#formats) ne soit pas r
 
 (attributs requis : [`src`](/fr/guides/integrations-guide/image/#src-1), [`widths`](/fr/guides/integrations-guide/image/#widths), [`sizes`](/fr/guides/integrations-guide/image/#sizes), [`alt`](/fr/guides/integrations-guide/image/#alt-1), et [`aspectRatio`](/fr/guides/integrations-guide/image/#aspectratio-1))
 
-Passez à l'attribut `src` du composant un chemin relatif au dossier publique et incluez une valeur pour `alt`.
+Passez à l'attribut `src` du composant un chemin relatif au dossier public et incluez une valeur pour `alt`.
 
 L'image sera traitée comme une image distante, donc une valeur pour `aspectRatio` est également requise pour s'assurer que la hauteur correcte puisse être calculée au moment du Build.
 
