--- a/src/pages/de/guides/migrate-to-astro.mdx
+++ b/src/pages/de/guides/migrate-to-astro.mdx
@@ -1,48 +1,45 @@
 ---
 title: Ein bestehendes Projekt zu Astro migrieren
-description: Einige Tipps und Tricks für die Migration Deiner Website zu Astro.
+description: Einige Tipps und Tricks für die Migration deiner Website zu Astro.
 layout: ~/layouts/MainLayout.astro
 i18nReady: true
 ---
 import MigrationGuidesNav from '~/components/MigrationGuidesNav.astro';
 
-**Bist Du bereit, Deine Website auf Astro umzustellen?** In einem unserer Leitfäden findest Du Tipps zur Migration.
-
-## Migrationsleitfäden
+**Bist du bereit, deine Website auf Astro umzustellen?** In einem unserer Anleitungen findest du Tipps zur Migration.
+## Migrations-Anleitungen
 
 <MigrationGuidesNav />
 
-Beachte, dass viele dieser Seiten **Stubs** sind: Sammlungen von Ressourcen, die auf Deine Bearbeitung warten!
+Beachte, dass viele dieser Seiten **Stubs** sind: Sammlungen von Ressourcen, die auf deinen Beitrag warten!
 
-## Warum solltest Du Deine Website zu Astro migrieren?
+## Warum solltest du deine Website zu Astro migrieren?
 
-Astro bietet viele Vorteile: Geschwindigkeit, Einfachheit und viele der von Dir gewünschten Funktionen sind direkt in das Framework integriert. Wenn Du Deine Website erweitern musst, bietet Astro mehrere [offizielle und 3rd-Party-Community-Integrationen](https://astro.build/integrations).
+Astro bietet viele Vorteile: Geschwindigkeit, Einfachheit und viele der von dir gewünschten Funktionen sind direkt in das Framework integriert. Wenn du deine Website erweitern musst, bietet Astro mehrere [offizielle und 3rd-Party-Community-Integrationen](https://astro.build/integrations).
 
-Die Migration kann weniger Arbeit sein, als Du denkst!
+Die Migration kann weniger Arbeit sein, als du denkst!
 
-Abhängig von Deinem bestehenden Projekt kannst Du möglicherweise eins der folgenden verwenden:
+Abhängig von deinem bestehenden Projekt kannst du möglicherweise eins der folgenden verwenden:
 
 - [UI Framework Komponenten](/de/core-concepts/framework-components/) direkt in Astro. 
 
 - [CSS Stylesheets oder Bibliotheken](/de/guides/styling/) inklusive Tailwind.
 
-- [Markdown/MDX Dateien](/de/guides/markdown-content/), konfiguriert unter Verwendung Deiner bestehenden [remark und rehype Plugins](/de/guides/markdown-content/#markdown-konfigurieren).
+- [Markdown/MDX Dateien](/de/guides/markdown-content/), konfiguriert unter Verwendung deiner bestehenden [remark und rehype Plugins](/de/guides/markdown-content/#markdown-konfigurieren).
 
 - [Inhalte aus einem CMS](/de/guides/cms/) mittels Integrationen oder einer API.
 
-
 ## Welche Projekte kann ich in Astro konvertieren?
 
-[Viele bestehende Websites können mit Astro erstellt werden](/de/concepts/why-astro/). Astro eignet sich ideal für Ihre bestehenden inhaltsbasierte Webseiten wie Blogs, Landing Pages, Marketing-Seiten und Portfolios. Astro lässt sich in mehrere beliebte Headless CMS integrieren und ermöglicht die Anbindung von eCommerce-Warenkörben.
+[Viele bestehende Websites können mit Astro erstellt werden](/de/concepts/why-astro/). Astro eignet sich ideal für deine bestehenden inhaltsbasierte Webseiten wie Blogs, Landing Pages, Marketing-Seiten und Portfolios. Astro lässt sich in mehrere beliebte Headless CMS integrieren und ermöglicht die Anbindung von eCommerce-Warenkörben.
 
-Astro allows you to choose between a statically-generated site and [server-side rendering (SSR)](/de/guides/server-side-rendering/), making it a great replacement for SSGs or for sites that need to fetch some page data on the fly.
 Astro bietet die Möglichkeit, zwischen einer statisch generierten Website und [server-side rendering (SSR)](/de/guides/server-side-rendering/) zu wählen, was es zu einem großartigen Ersatz für SSGs oder für Websites macht, die Seiten on-the-fly abrufen müssen.
 
 ## Wie wird sich mein Projektdesign ändern?
 
-Je nach Struktur Deines bestehenden Projektes musst Du möglicherweise über folgende Dinge nachdenken:
+Je nach Struktur deines bestehenden Projektes musst du möglicherweise über folgende Dinge nachdenken:
 
-- Gestaltung in [Astro-Inseln](/de/concepts/islands/#was-ist-eine-astro-insel?), um das Senden von unnötigem JavaScript an den Browser zu vermeiden.
+- Gestaltung in [Astro-Inseln](/de/concepts/islands/#was-ist-eine-astro-insel), um das Senden von unnötigem JavaScript an den Browser zu vermeiden.
 
 - Bereitstellung von clientseitiger Interaktivität mit [clientseitigen `<script>` Tags](/de/guides/client-side-scripts/) oder [UI-Framework-Komponenten](/de/core-concepts/framework-components/).
 
