--- a/src/pages/fr/guides/images.mdx
+++ b/src/pages/fr/guides/images.mdx
@@ -78,7 +78,7 @@ Lorsque vous ajoutez des images dans un [composant de Framework UI](/fr/core-con
 ### `src/`
 Vos images stockées dans `src/` peuvent être utilisées par les composants (`.astro`, `.mdx` et autres Frameworks UI) mais pas dans les fichiers Markdown. 
 
-Nous recommandons de garder vos images dans [`public/`](#public) ou de les stocker [à distance](#using-images-from-a-cms-or-cdn) si vous devez utiliser des fichiers Markdown.
+Nous recommandons de garder vos images dans [`public/`](#public) ou de les stocker [à distance](#utilisation-des-images-depuis-un-cms-ou-un-cdn) si vous devez utiliser des fichiers Markdown.
 
 Importez-les depuis un **chemin de fichier relatif** ou un [alias d'import](/fr/guides/aliases/) dans n'importe quel fichier composant et utilisez ensuite l'import comme attribut `src` de l'image.
 
@@ -214,7 +214,7 @@ Vous devez fournir au composant des indications sur les largeurs d'image et les 
 
 Par défaut, les [`formats`](/fr/guides/integrations-guide/image/#formats) du composant `<Picture />` incluront `avif` et `webp` en plus du format d'origine de l'image s'il n'est pas spécifié .
 
-#### Remote Images 
+#### Images distantes
 
 (attributs requis : [`src`](/fr/guides/integrations-guide/image/#src-1), [`widths`](/fr/guides/integrations-guide/image/#widths), [`sizes`](/fr/guides/integrations-guide/image/#sizes), [`alt`](/fr/guides/integrations-guide/image/#alt-1), et [`aspectRatio`](/fr/guides/integrations-guide/image/#aspectratio-1))
 
@@ -339,7 +339,7 @@ Les CDN d'images fonctionnent avec Astro. Utilisez l'URL complète d'une image c
 
 Alternativement, si le CDN fournit un SDK Node.js, vous pouvez l'utiliser dans votre projet. Par exemple, [le SDK de Cloudinary](https://cloudinary.com/documentation/node_integration) peut générer la balise `<img>` avec le `src` approprié pour vous.
 
-Pour utiliser des [images externes avec les composants `<Image />`](#remote-images) et [`<Picture />`](#remote-images-1) de l'intégration d'image d'Astro, vous devez spécifier les valeurs de dimension et de format pour travailler avec des images distantes.
+Pour utiliser des [images externes avec les composants `<Image />`](#images-distantes) et [`<Picture />`](#images-distantes-1) de l'intégration d'image d'Astro, vous devez spécifier les valeurs de dimension et de format pour travailler avec des images distantes.
 
 ## Texte Alternatif
 
