ci: update error reference docs

--- a/src/content/docs/en/reference/errors/unknown-config-error.mdx
+++ b/src/content/docs/en/reference/errors/unknown-config-error.mdx
@@ -4,7 +4,7 @@
 # Instead, change this file: https://github.com/withastro/astro/blob/main/packages/astro/src/core/errors/errors-data.ts
 # Translators, please remove this note and the <DontEditWarning/> component.
 
-title: CSS Syntax Error.
+title: Unknown configuration error.
 i18nReady: true
 githubURL: https://github.com/withastro/astro/blob/main/packages/astro/src/core/errors/errors-data.ts
 ---
@@ -13,12 +13,13 @@ import DontEditWarning from '~/components/DontEditWarning.astro'
 <DontEditWarning />
 
 
-> **Example error messages:**<br/>
-CSSSyntaxError: Missed semicolon<br/>
-CSSSyntaxError: Unclosed string<br/> (E05001)
-
 ## What went wrong?
-Astro encountered an error while parsing your CSS, due to a syntax error. This is often caused by a missing semicolon.
+Astro encountered an unknown error loading your Astro configuration file.
+This is often caused by a syntax error in your config and the message should offer more information.
 
+If you can reliably cause this error to happen, we'd appreciate if you could [open an issue](https://astro.build/issues/)
+
+**See Also:**
+-  [Configuration Reference](/en/reference/configuration-reference/)
 
 
