--- a/src/content/docs/en/reference/error-reference.mdx
+++ b/src/content/docs/en/reference/error-reference.mdx
@@ -17,6 +17,7 @@ The following reference is a complete list of the errors you may encounter while
 
 ## Astro Errors
 
+- [**UnknownCompilerError**](/en/reference/errors/unknown-compiler-error/) (E01000)<br/>Unknown compiler error.
 - [**StaticRedirectNotAvailable**](/en/reference/errors/static-redirect-not-available/) (E03001)<br/>`Astro.redirect` is not available in static mode.
 - [**ClientAddressNotAvailable**](/en/reference/errors/client-address-not-available/) (E03002)<br/>`Astro.clientAddress` is not available in current adapter.
 - [**StaticClientAddressNotAvailable**](/en/reference/errors/static-client-address-not-available/) (E03003)<br/>`Astro.clientAddress` is not available in static mode.
@@ -38,23 +39,29 @@ The following reference is a complete list of the errors you may encounter while
 - [**InvalidPrerenderExport**](/en/reference/errors/invalid-prerender-export/) (E03019)<br/>Invalid prerender export.
 - [**InvalidComponentArgs**](/en/reference/errors/invalid-component-args/) (E03020)<br/>Invalid component arguments.
 - [**PageNumberParamNotFound**](/en/reference/errors/page-number-param-not-found/) (E03021)<br/>Page number param not found.
+- [**UnknownViteError**](/en/reference/errors/unknown-vite-error/) (E04000)<br/>Unknown Vite Error.
 - [**FailedToLoadModuleSSR**](/en/reference/errors/failed-to-load-module-ssr/) (E04001)<br/>Could not import file.
 - [**InvalidGlob**](/en/reference/errors/invalid-glob/) (E04002)<br/>Invalid glob pattern.
 ## CSS Errors
 
+- [**UnknownCSSError**](/en/reference/errors/unknown-csserror/) (E05000)<br/>Unknown CSS Error.
 - [**CSSSyntaxError**](/en/reference/errors/csssyntax-error/) (E05001)<br/>CSS Syntax Error.
 ## Markdown Errors
 
+- [**UnknownMarkdownError**](/en/reference/errors/unknown-markdown-error/) (E06000)<br/>Unknown Markdown Error.
 - [**MarkdownFrontmatterParseError**](/en/reference/errors/markdown-frontmatter-parse-error/) (E06001)<br/>Failed to parse Markdown frontmatter.
 - [**InvalidFrontmatterInjectionError**](/en/reference/errors/invalid-frontmatter-injection-error/) (E06003)<br/>Invalid frontmatter injection.
 - [**MdxIntegrationMissingError**](/en/reference/errors/mdx-integration-missing-error/) (E06004)<br/>MDX integration missing.
+- [**UnknownConfigError**](/en/reference/errors/unknown-config-error/) (E07000)<br/>Unknown configuration error.
 - [**ConfigNotFound**](/en/reference/errors/config-not-found/) (E07001)<br/>Specified configuration file not found.
 - [**ConfigLegacyKey**](/en/reference/errors/config-legacy-key/) (E07002)<br/>Legacy configuration detected.
 ## CLI Errors
 
+- [**UnknownCLIError**](/en/reference/errors/unknown-clierror/) (E08000)<br/>Unknown CLI Error.
 - [**GenerateContentTypesError**](/en/reference/errors/generate-content-types-error/) (E08001)<br/>Failed to generate content types.
 ## Content Collection Errors
 
+- [**UnknownContentCollectionError**](/en/reference/errors/unknown-content-collection-error/) (E09000)<br/>Unknown Content Collection Error.
 - [**InvalidContentEntryFrontmatterError**](/en/reference/errors/invalid-content-entry-frontmatter-error/) (E09001)<br/>Content entry frontmatter does not match schema.
 - [**InvalidContentEntrySlugError**](/en/reference/errors/invalid-content-entry-slug-error/) (E09002)<br/>Invalid content entry slug.
 - [**ContentSchemaContainsSlugError**](/en/reference/errors/content-schema-contains-slug-error/) (E09003)<br/>Content Schema should not contain `slug`.
