--- a/src/content/docs/en/reference/errors/unknown-clierror.mdx
+++ b/src/content/docs/en/reference/errors/unknown-clierror.mdx
@@ -4,7 +4,7 @@
 # Instead, change this file: https://github.com/withastro/astro/blob/main/packages/astro/src/core/errors/errors-data.ts
 # Translators, please remove this note and the <DontEditWarning/> component.
 
-title: CSS Syntax Error.
+title: Unknown CLI Error.
 i18nReady: true
 githubURL: https://github.com/withastro/astro/blob/main/packages/astro/src/core/errors/errors-data.ts
 ---
@@ -13,12 +13,10 @@ import DontEditWarning from '~/components/DontEditWarning.astro'
 <DontEditWarning />
 
 
-> **Example error messages:**<br/>
-CSSSyntaxError: Missed semicolon<br/>
-CSSSyntaxError: Unclosed string<br/> (E05001)
-
 ## What went wrong?
-Astro encountered an error while parsing your CSS, due to a syntax error. This is often caused by a missing semicolon.
+Astro encountered an unknown error while starting one of its CLI commands. The error message should contain more information.
+
+If you can reliably cause this error to happen, we'd appreciate if you could [open an issue](https://astro.build/issues/)
 
 
 
