--- a/src/content/docs/en/reference/errors/unknown-compiler-error.mdx
+++ b/src/content/docs/en/reference/errors/unknown-compiler-error.mdx
@@ -4,7 +4,7 @@
 # Instead, change this file: https://github.com/withastro/astro/blob/main/packages/astro/src/core/errors/errors-data.ts
 # Translators, please remove this note and the <DontEditWarning/> component.
 
-title: CSS Syntax Error.
+title: Unknown compiler error.
 i18nReady: true
 githubURL: https://github.com/withastro/astro/blob/main/packages/astro/src/core/errors/errors-data.ts
 ---
@@ -13,12 +13,14 @@ import DontEditWarning from '~/components/DontEditWarning.astro'
 <DontEditWarning />
 
 
-> **Example error messages:**<br/>
-CSSSyntaxError: Missed semicolon<br/>
-CSSSyntaxError: Unclosed string<br/> (E05001)
+> Unknown compiler error. (E01000)
 
 ## What went wrong?
-Astro encountered an error while parsing your CSS, due to a syntax error. This is often caused by a missing semicolon.
+Astro encountered an unknown error while compiling your files. In most cases, this is not your fault, but an issue in our compiler.
 
+If there isn't one already, please [create an issue](https://astro.build/issues/compiler).
+
+**See Also:**
+-  [withastro/compiler issues list](https://astro.build/issues/compiler)
 
 
