~~Local~~ Images in path

--- a/src/content/docs/en/guides/images.mdx
+++ b/src/content/docs/en/guides/images.mdx
@@ -147,7 +147,7 @@ You must also either provide [`width`](/en/guides/integrations-guide/image/#widt
 
 [All other properties](/en/guides/integrations-guide/image/#image-) are optional.
 
-#### Local Images in `public/`
+#### Images in `public/`
 
 (required attributes: [`src`](/en/guides/integrations-guide/image/#src), [`alt`](/en/guides/integrations-guide/image/#alt), [`format`](/en/guides/integrations-guide/image/#format), and dimensions)
 
@@ -231,7 +231,7 @@ You must provide the component with guidance for image widths and screen sizes, 
 
 Although [`formats`](/en/guides/integrations-guide/image/#formats) is not required, the original image format of remote images is unknown and will not be included by default. If not provided, only `webp` and `avif` will be included.
 
-#### Local Images in `public/`
+#### Images in `public/`
 
 (required attributes: [`src`](/en/guides/integrations-guide/image/#src-1), [`widths`](/en/guides/integrations-guide/image/#widths), [`sizes`](/en/guides/integrations-guide/image/#sizes), [`alt`](/en/guides/integrations-guide/image/#alt-1), and [`aspectRatio`](/en/guides/integrations-guide/image/#aspectratio-1))
 
