new captcha recipe pulled from endpoints

--- a/src/content/docs/en/guides/recipes.mdx
+++ b/src/content/docs/en/guides/recipes.mdx
@@ -22,7 +22,7 @@ See guided examples of adding features to your Astro project.
 
 [eCommerce cart flyout](/en/core-concepts/sharing-state/)
 
-[Verifying a Captcha](/en/core-concepts/endpoints/#example-verifying-a-captcha)
+[Verify a Captcha](/en/guides/recipes/captcha/)
 
 [Add support for importing YAML](/en/guides/imports/#example-yaml-support)
 
