add yaml support recipe

--- a/src/content/docs/en/guides/recipes.mdx
+++ b/src/content/docs/en/guides/recipes.mdx
@@ -20,13 +20,11 @@ See guided examples of adding features to your Astro project.
 
 {/* Examples taken from other larger pages; new pages to be created */ }
 
-[eCommerce cart flyout](/en/core-concepts/sharing-state/)
+[Build an eCommerce cart flyout with nanostores](/en/guides/recipes/nanostores/)
 
 [Verify a Captcha](/en/guides/recipes/captcha/)
 
-[Add support for importing YAML](/en/guides/imports/#example-yaml-support)
-
-[Create a single layout for `.md`, `.mdx` and `.astro` files](/en/core-concepts/layouts/#using-one-layout-for-md-mdx-and-astro)
+[Add support for importing YAML](/en/guides/recipes/add-yaml-support/)
 
 [Convert an existing project to content collections](/en/guides/content-collections/#migrating-from-file-based-routing)
 
