--- a/src/content/docs/en/core-concepts/astro-components.mdx
+++ b/src/content/docs/en/core-concepts/astro-components.mdx
@@ -450,57 +450,6 @@ const { title } = Astro.props
 </div>
 ```
 
-## CSS Styles
-
-CSS `<style>` tags are also supported inside of the component template.
-
-They can be used to style your components, and all style rules are automatically scoped to the component itself to prevent CSS conflicts in large apps.
-
-```astro title="src/components/StyledHeading.astro"
----
-// Your component script here!
----
-<style>
-  /* scoped to the component, other H1s on the page remain the same */
-  h1 { color: red }
-</style>
-
-<h1>Hello, world!</h1>
-```
-
-:::caution
-The styles defined here apply only to content written directly in the component's own component template. Children, and any imported components will **not** be styled by default.
-:::
-
-📚 See our [Styling Guide](/en/guides/styling/) for more information on applying styles.
-
-## Client-Side Scripts
-
-Astro components support adding client-side interactivity using standard HTML `<script>` tags.
-
-Scripts can be used to add event listeners, send analytics data, play animations, and everything else JavaScript can do on the web.
-
-```astro
-// src/components/ConfettiButton.astro
-<button data-confetti-button>Celebrate!</button>
-
-<script>
-  // Import npm modules.
-  import confetti from 'canvas-confetti';
-
-  // Find our component DOM on the page.
-  const buttons = document.querySelectorAll('[data-confetti-button]');
-
-  // Add event listeners to fire confetti when a button is clicked.
-  buttons.forEach((button) => {
-    button.addEventListener('click', () => confetti());
-  });
-</script>
-```
-
-By default, Astro processes and bundles `<script>` tags, adding support for importing npm modules, writing TypeScript, and more.
-
-📚 See our [Scripting Guide](/en/guides/client-side-scripts/) for more details.
 
 ## HTML Components
 
@@ -517,6 +466,4 @@ A [`<slot />` element](/en/core-concepts/astro-components/#slots) inside an HTML
 
 ## Next Steps
 
-📚 Read about [Astro's built-in components](/en/reference/api-reference/#built-in-components).
-
-📚 Learn about using [JavaScript framework components](/en/core-concepts/framework-components/) in your Astro project.
+📚 Learn about using [UI framework components](/en/core-concepts/framework-components/) in your Astro project.
