--- a/src/content/docs/en/core-concepts/astro-components.mdx
+++ b/src/content/docs/en/core-concepts/astro-components.mdx
@@ -4,11 +4,7 @@ description: An intro to the .astro component syntax.
 i18nReady: true
 ---
 
-**Astro components** are the basic building blocks of any Astro project. They are HTML-only templating components with no client-side runtime.
-
-**If you know HTML, you already know enough to write your first Astro component.**
-
-Astro component syntax is a superset of HTML. The syntax was [designed to feel familiar to anyone with experience writing HTML or JSX](#differences-between-astro-and-jsx), and adds support for including components and JavaScript expressions. You can spot an Astro component by its file extension: `.astro`.
+**Astro components** are the basic building blocks of any Astro project. They are HTML-only templating components with no client-side runtime. You can spot an Astro component by its file extension: `.astro`.
 
 Astro components are extremely flexible. Often, an Astro component will contain some **reusable UI on the page**, like a header or a profile card. At other times, an Astro component may contain a smaller snippet of HTML, like a collection of common `<meta>` tags that make SEO easy to work with. Astro components can even contain an entire page layout.
 
@@ -17,7 +13,7 @@ The most important thing to know about Astro components is that they **render to
 
 ## Component Structure
 
-An Astro component is made up of two main parts: the **Component Script** and the **Component Template**. Each part performs a different job, but together they aim to provide a framework that is both easy to use and expressive enough to handle whatever you might want to build.
+An Astro component is made up of two main parts: the **Component Script** and the **Component Template**. Each part performs a different job, but together they provide a framework that is both easy to use and expressive enough to handle whatever you might want to build.
 
 ```astro title="src/components/EmptyComponent.astro"
 ---
@@ -25,20 +21,6 @@ An Astro component is made up of two main parts: the **Component Script** and th
 ---
 <!-- Component Template (HTML + JS Expressions) -->
 ```
-
-You can use components inside of other components, to build more and more advanced UI. For example, a `Button` component could be used to create a `ButtonGroup` component like so:
-
-```astro title="src/components/ButtonGroup.astro"
----
-import Button from './Button.astro';
----
-<div>
-  <Button title="Button 1" />
-  <Button title="Button 2" />
-  <Button title="Button 3" />
-</div>
-```
-
 
 ### The Component Script
 
@@ -67,7 +49,7 @@ const data = await fetch('SOME_SECRET_API_URL/users').then(r => r.json());
 <!-- Your template here! -->
 ```
 
-The code fence is designed to guarantee that the JavaScript that you write in it is "fenced in." It won't escape into your frontend application, or fall into your users hands. You can safely write code here that is expensive or sensitive (like a call to your private database) without worrying about it ever ending up in your user's browser.
+The code fence is designed to guarantee that the JavaScript that you write in it is "fenced in." It won't escape into your frontend application, or fall into your user's hands. You can safely write code here that is expensive or sensitive (like a call to your private database) without worrying about it ever ending up in your user's browser.
 
 :::tip
 You can even write TypeScript in your component script!
@@ -79,7 +61,7 @@ Below the component script, sits the component template. The component template 
 
 If you write plain HTML here, your component will render that HTML in any Astro page it is imported and used.
 
-However, Astro's component template syntax also supports **JavaScript expressions**, **imported components** and [**special Astro directives**](/en/reference/directives-reference/). Data and values defined (at page build time) in the component script can be used in the component template to produce dynamically-created HTML.
+However, [Astro's component template syntax](/en/core-concepts/astro-syntax/) also supports **JavaScript expressions**, **imported components** and [**special Astro directives**](/en/reference/directives-reference/). Data and values defined (at page build time) in the component script can be used in the component template to produce dynamically-created HTML.
 
 ```astro title="src/components/MyFavoritePokemon.astro"
 ---
@@ -106,184 +88,21 @@ const myFavoritePokemon = [/* ... */];
 <p class:list={["add", "dynamic", {classNames: true}]} />
 ```
 
-## JSX-like Expressions
+## Component-based design
 
-You can define local JavaScript variables inside of the frontmatter component script within an Astro component. You can then inject these variables into the component's HTML template using JSX-like expressions!
+Components are designed to be **reusable** and **composable**. You can use components inside of other components to build more and more advanced UI. For example, a `Button` component could be used to create a `ButtonGroup` component:
 
-:::note[dynamic vs reactive]
-Using this approach, you can include **dynamic** values that are calculated in the frontmatter.  But once included, these values are not **reactive** and will never change. Astro components are templates that only run once, at build time.
-
-See below for more examples of [differences between Astro and JSX](#differences-between-astro-and-jsx).
-:::
-
-### Variables
-
-Local variables can be added into the HTML using the curly braces syntax:
-
-```astro title="src/components/Variables.astro" "{name}"
+```astro title="src/components/ButtonGroup.astro"
 ---
-const name = "Astro";
+import Button from './Button.astro';
 ---
 <div>
-  <h1>Hello {name}!</h1>  <!-- Outputs <h1>Hello Astro!</h1> -->
+  <Button title="Button 1" />
+  <Button title="Button 2" />
+  <Button title="Button 3" />
 </div>
 ```
 
-### Dynamic Attributes
-
-Local variables can be used in curly braces to pass attribute values to both HTML elements and components:
-
-```astro title="src/components/DynamicAttributes.astro" "{name}" "${name}"
----
-const name = "Astro";
----
-<h1 class={name}>Attribute expressions are supported</h1>
-
-<MyComponent templateLiteralNameAttribute={`MyNameIs${name}`} />
-```
-
-:::caution
-HTML attributes will be converted to strings, so it is not possible to pass functions and objects to HTML elements.
-For example, you can't assign an event handler to an HTML element in an Astro component:
-
-```astro
----
-// dont-do-this.astro
-function handleClick () {
-    console.log("button clicked!");
-}
----
-<!-- ❌ This doesn't work! ❌ -->
-<button onClick={handleClick}>Nothing will happen when you click me!</button>
-```
-
-Instead, use a client-side script to add the event handler, like you would in vanilla JavaScript:
-
-```astro
----
-// do-this-instead.astro
----
-<button id="button">Click Me</button>
-<script>
-  function handleClick () {
-    console.log("button clicked!");
-  }
-  document.getElementById("button").addEventListener("click", handleClick);
-</script>
-```
-:::
-
-### Dynamic HTML
-
-Local variables can be used in JSX-like functions to produce dynamically-generated HTML elements:
-
-```astro title="src/components/DynamicHtml.astro" "{item}"
----
-const items = ["Dog", "Cat", "Platypus"];
----
-<ul>
-  {items.map((item) => (
-    <li>{item}</li>
-  ))}
-</ul>
-```
-
-Astro can conditionally display HTML using JSX logical operators and ternary expressions.
-
-```astro title="src/components/ConditionalHtml.astro" "visible"
----
-const visible = true;
----
-{visible && <p>Show me!</p>}
-
-{visible ? <p>Show me!</p> : <p>Else show me!</p>}
-```
-
-### Dynamic Tags
-
-You can also use dynamic tags by setting a variable to an HTML tag name or a component import:
-
-```astro title="src/components/DynamicTags.astro" /Element|(?<!My)Component/
----
-import MyComponent from "./MyComponent.astro";
-const Element = 'div'
-const Component = MyComponent;
----
-<Element>Hello!</Element> <!-- renders as <div>Hello!</div> -->
-<Component /> <!-- renders as <MyComponent /> -->
-```
-
-When using dynamic tags:
-
-- **Variable names must be capitalized.** For example, use `Element`, not `element`. Otherwise, Astro will try to render your variable name as a literal HTML tag.
-
-- **Hydration directives are not supported.** When using [`client:*` hydration directives](/en/core-concepts/framework-components/#hydrating-interactive-components), Astro needs to know which components to bundle for production, and the dynamic tag pattern prevents this from working.
-
-### Fragments & Multiple Elements
-
-An Astro component template can render multiple elements with no need to wrap everything in a single `<div>` or `<>`, unlike JavaScript or JSX.
-
-```astro title="src/components/RootElements.astro"
----
-// Template with multiple elements
----
-<p>No need to wrap elements in a single containing element.</p>
-<p>Astro supports multiple root elements in a template.</p>
-```
-
-However, when using an expression to dynamically create multiple elements, you should wrap these elements inside a **fragment** as you would in JavaScript or JSX. Astro supports using either `<Fragment> </Fragment>` or the shorthand `<> </>`.
-
-```astro title="src/components/FragmentWrapper.astro" "<>" "</>"
----
-const items = ["Dog", "Cat", "Platypus"];
----
-<ul>
-  {items.map((item) => (
-    <>
-      <li>Red {item}</li>
-      <li>Blue {item}</li>
-      <li>Green {item}</li>
-    </>
-  ))}
-</ul>
-```
-
-Fragments can also be useful to avoid wrapper elements when adding [`set:*` directives](/en/reference/directives-reference/#sethtml), as in the following example:
-
-```astro title="src/components/SetHtml.astro" "Fragment"
----
-const htmlString = '<p>Raw HTML content</p>';
----
-<Fragment set:html={htmlString} />
-```
-
-### Differences between Astro and JSX
-
-Astro component syntax is a superset of HTML. It was designed to feel familiar to anyone with HTML or JSX experience, but there are a couple of key differences between `.astro` files and JSX.
-
-#### Attributes
-
-In Astro, you use the standard `kebab-case` format for all HTML attributes instead of the `camelCase` used in JSX. This even works for `class`, which is not supported by React.
-
-```jsx del={1} ins={2} title="example.astro"
-<div className="box" dataValue="3" />
-<div class="box" data-value="3" />
-```
-
-#### Comments
-
-In Astro, you can use standard HTML comments or JavaScript-style comments.
-
-```astro title="example.astro"
----
----
-<!-- HTML comment syntax is valid in .astro files -->
-{/* JS comment syntax is also valid */}
-```
-
-:::caution
-HTML-style comments will be included in browser DOM, while JS ones will be skipped. To leave TODO messages or other development-only explanations, you may wish to use JavaScript-style comments instead.
-:::
 
 ## Component Props
 
@@ -312,7 +131,6 @@ const name = "Astro"
 <GreetingHeadline greeting="Hi" name={name} />
 <p>I hope you have a wonderful day!</p>
 ```
-
 
 You can also define your props with TypeScript with a `Props` type interface. Astro will automatically pick up the `Props` interface in your frontmatter and give type warnings/errors. These props can also be given default values when destructured from `Astro.props`.
 
