update links to astro-syntax

--- a/src/content/docs/en/tutorial/6-islands/2.mdx
+++ b/src/content/docs/en/tutorial/6-islands/2.mdx
@@ -224,4 +224,4 @@ Choose whether each of the following statements describes Astro `<script>` tags,
 
 ### Resources
 
-- [Client-side `<script>` in Astro](/en/core-concepts/astro-components/#client-side-scripts)
+- [Client-side `<script>` in Astro](/en/guides/client-side-scripts/)
