--- a/src/content/docs/en/tutorial/3-components/4.mdx
+++ b/src/content/docs/en/tutorial/3-components/4.mdx
@@ -259,4 +259,4 @@ Those commands are all executed at build time to create static HTML for your sit
 
 ### Resources
 
-[Client-side scripts in Astro](/en/core-concepts/astro-components/#client-side-scripts)
+[Client-side scripts in Astro](/en/guides/client-side-scripts/)
