Correct code sample

--- a/src/content/docs/en/guides/cms/contentful.mdx
+++ b/src/content/docs/en/guides/cms/contentful.mdx
@@ -147,8 +147,8 @@ const entries = await contentfulClient.getEntries<BlogPost>({
 <body>
   {entries.items.map((item) => (
     <section>
-      <h2>{item.fields.name}</h2>
-      <article set:html={documentToHtmlString(items.fields.content)}></article>
+      <h2>{item.fields.title}</h2>
+      <article set:html={documentToHtmlString(item.fields.content)}></article>
     </section>
   ))}
 </body>
