--- a/src/content/docs/en/guides/cms/tina-cms.mdx
+++ b/src/content/docs/en/guides/cms/tina-cms.mdx
@@ -11,7 +11,7 @@ service: Tina CMS
 ## Installation 
 [Tina Documentation](https://tina.io/docs/introduction/tina-init/)
 
-To install Tina, depending on your package manager of choice, run `npx @tinacms/cli@latest init` or `pnpx @tinacms/cli@latest init`. After this has finished, you should now have .tina folder in the root of your project and an admin folder in your public directory. It will also create a markdown file at `content/posts/hello-world.md`: feel free to delete this file and it's enclosing folders. 
+Depending on your package manager of choice, to install Tina first run `npx @tinacms/cli@latest init` or `pnpx @tinacms/cli@latest init`. After this has finished, you should now have a `.tina` folder in the root of your project and an `admin` folder in your public directory. It will also create a markdown file at `content/posts/hello-world.md`. Feel free to delete this hello world file and it's enclosing folders. 
 
 You will want to change the dev script in package.json to:
 
@@ -82,7 +82,7 @@ export default defineConfig({
           },
           {
             type: "string",
-            name: "body"
+            name: "body",
             isBody: true,
             label: "Body",
             required: true,    
@@ -94,6 +94,6 @@ export default defineConfig({
 });
 ```
 
-More information on collections can be found in the tina docs [here](https://tina.io/docs/reference/collections/). If you have set everything up correctly, on running `pnpm run dev` your should now be able to navigate to `localhost:3000/admin/index.html` and see your collections for editing in TinaCMS.
+More information on collections can be found in the Tina docs [here](https://tina.io/docs/reference/collections/). If you have set everything up correctly, on running `pnpm run dev` your should now be able to navigate to `localhost:3000/admin/index.html` and see your collections for editing in TinaCMS.
 
 To set up TinaCMS for production, you will either need to use Tina Cloud or self host the Tina Data Layer which can be achieved as a severless function. For more information on this, please see the "Going To Production" section of the Tina docs, starting [here](https://tina.io/docs/tina-cloud/).
