update CLI page and put in Learn menu

--- a/src/content/docs/en/reference/cli-reference.mdx
+++ b/src/content/docs/en/reference/cli-reference.mdx
@@ -1,5 +1,5 @@
 ---
-title: CLI Reference
+title: CLI Commands
 i18nReady: true
 ---
 import Since from '~/components/Since.astro';
@@ -9,35 +9,103 @@ import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro'
 
 You can use the Command-Line Interface (CLI) provided by Astro to develop, build, and preview your project from a terminal window.
 
-Use the CLI by running one of the **commands** documented on this page, optionally followed by any **flags**. Flags customize the behavior of a command. For example, to start the development server on port `8080`, you would combine the `astro dev` command with the `--port` flag: `astro dev --port 8080`.
+Use the CLI by running one of the **commands** documented on this page with your preferred package manager, optionally followed by any **flags**. Flags customize the behavior of a command.
 
-In most cases you will use the CLI via your package manager:
+
+Use the following `astro` command in your terminal to display a list of all available commands:
 
 <PackageManagerTabs>
   <Fragment slot="npm">
   ```shell
-  npx astro dev --port 8080
+  npx astro
   ```
   </Fragment>
   <Fragment slot="pnpm">
   ```shell
-  pnpm astro dev --port 8080
+  pnpm astro
   ```
   </Fragment>
   <Fragment slot="yarn">
   ```shell
-  yarn astro dev --port 8080
+  yarn astro
   ```
   </Fragment>
 </PackageManagerTabs>
 
-If you started your project using [the `create astro` wizard](/en/install/auto/#1-run-the-setup-wizard), you can also use the scripts in `package.json` for a shorter version of these commands. See the `README.md` in your project for details of which commands are available.
+The following list will display in your terminal:
+
+```bash
+astro [command] [...flags]
+
+Commands 
+              add  Add an integration.
+            build  Build your project and write it to disk.
+            check  Check your project for errors.
+              dev  Start the development server.
+             docs  Open documentation in your web browser.
+          preview  Preview your build locally.
+             sync  Generate content collection types.
+        telemetry  Configure telemetry settings.
+
+Global Flags 
+  --config <path>  Specify your config file.
+    --root <path>  Specify your project root folder.
+     --site <url>  Specify your project site.
+--base <pathname>  Specify your project base.
+        --verbose  Enable verbose logging.
+         --silent  Disable all logging.
+        --version  Show the version number and exit.
+           --help  Show this help message.
+```
+
+For example, to display your project's version of Astro, run the following command for your package manager:
+
+<PackageManagerTabs>
+  <Fragment slot="npm">
+  ```shell
+  # show your project's version of Astro
+  npx astro --version
+  ```
+  </Fragment>
+  <Fragment slot="pnpm">
+  ```shell
+  # show your project's version of Astro
+  pnpm astro --version
+  ```
+  </Fragment>
+  <Fragment slot="yarn">
+  ```shell
+  # show your project's version of Astro
+  yarn astro --version
+  ```
+  </Fragment>
+</PackageManagerTabs>
+
+You can also use scripts in `package.json` for a shorter version of these commands.
+
+The following scripts for the most common commands (`astro dev`, `astro build`, and `astro preview`) are added for you automatically when you create a project using [the `create astro` wizard](/en/install/auto/#1-run-the-setup-wizard). When you follow the instructions to [install Astro manually](/en/install/manual/#2-install-astro), you are instructed to add these scripts yourself.
+
+```json title="package.json"
+{
+  "scripts": {
+    "dev": "astro dev",
+    "start": "astro dev",
+    "build": "astro build",
+    "preview": "astro preview"
+  }
+}
+```
+
+You will often use these common commands without any flags. But, for example, you may wish to start the development server on a different port, or build your site including draft pages. You can combine these scripts (which run `astro` commands) with an appropriate flag for more options:
 
 <PackageManagerTabs>
   <Fragment slot="npm">
   ```shell
   # run the dev server on port 8080 using the `start` script in `package.json`
   npm run start -- --port 8080
+
+  # build your site including draft pages using the `build` script in `package.json`
+  npm run build -- --drafts
   ```
   (The extra `--` before the `--port` flag is necessary for `npm` to pass your flags to the `astro` command.)
   </Fragment>
@@ -45,12 +113,18 @@ If you started your project using [the `create astro` wizard](/en/install/auto/#
   ```shell
   # run the dev server on port 8080 using the `start` script in `package.json`
   pnpm start --port 8080
+
+  # build your site including draft pages using the `build` script in `package.json`
+  pnpm build --drafts
   ```
   </Fragment>
   <Fragment slot="yarn">
   ```shell
   # run the dev server on port 8080 using the `start` script in `package.json`
   yarn start --port 8080
+
+  # build your site including draft pages using the `build` script in `package.json`
+  yarn build --drafts
   ```
   </Fragment>
 </PackageManagerTabs>
