more edits to CLI page intro for friendliness

--- a/src/content/docs/en/reference/cli-reference.mdx
+++ b/src/content/docs/en/reference/cli-reference.mdx
@@ -9,30 +9,54 @@ import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro'
 
 You can use the Command-Line Interface (CLI) provided by Astro to develop, build, and preview your project from a terminal window.
 
+### `astro` commands
+
 Use the CLI by running one of the **commands** documented on this page with your preferred package manager, optionally followed by any **flags**. Flags customize the behavior of a command.
 
-
-Use the following `astro` command in your terminal to display a list of all available commands:
+For example, use the `astro check` command with your package manager to run diagnostics:
 
 <PackageManagerTabs>
   <Fragment slot="npm">
   ```shell
-  npx astro
+  # run diagnostics on your project
+  npx astro check
   ```
   </Fragment>
   <Fragment slot="pnpm">
   ```shell
-  pnpm astro
+  # run diagnostics on your project
+  pnpm astro check
   ```
   </Fragment>
   <Fragment slot="yarn">
   ```shell
-  yarn astro
+  # run diagnostics on your project
+  yarn astro check
   ```
   </Fragment>
 </PackageManagerTabs>
 
-The following list will display in your terminal:
+Use the following `astro --help` command in your terminal to display a list of all available commands:
+
+<PackageManagerTabs>
+  <Fragment slot="npm">
+  ```shell
+  npx astro --help
+  ```
+  </Fragment>
+  <Fragment slot="pnpm">
+  ```shell
+  pnpm astro --help
+  ```
+  </Fragment>
+  <Fragment slot="yarn">
+  ```shell
+  yarn astro --help
+  ```
+  </Fragment>
+</PackageManagerTabs>
+
+The following message will display in your terminal:
 
 ```bash
 astro [command] [...flags]
@@ -58,32 +82,13 @@ Global Flags
            --help  Show this help message.
 ```
 
-For example, to display your project's version of Astro, run the following command for your package manager:
+### `package.json` scripts
 
-<PackageManagerTabs>
-  <Fragment slot="npm">
-  ```shell
-  # show your project's version of Astro
-  npx astro --version
-  ```
-  </Fragment>
-  <Fragment slot="pnpm">
-  ```shell
-  # show your project's version of Astro
-  pnpm astro --version
-  ```
-  </Fragment>
-  <Fragment slot="yarn">
-  ```shell
-  # show your project's version of Astro
-  yarn astro --version
-  ```
-  </Fragment>
-</PackageManagerTabs>
+You can also use scripts in `package.json` for shorter versions of these commands. Scripts also allow you to use the same commands that you may be familiar with from other projects, such as `npm run build`.
 
-You can also use scripts in `package.json` for a shorter version of these commands.
+The following scripts for the most common commands (`astro dev`, `astro build`, and `astro preview`) are added for you automatically when you create a project using [the `create astro` wizard](/en/install/auto/#1-run-the-setup-wizard).
 
-The following scripts for the most common commands (`astro dev`, `astro build`, and `astro preview`) are added for you automatically when you create a project using [the `create astro` wizard](/en/install/auto/#1-run-the-setup-wizard). When you follow the instructions to [install Astro manually](/en/install/manual/#2-install-astro), you are instructed to add these scripts yourself.
+When you follow the instructions to [install Astro manually](/en/install/manual/#2-install-astro), you are instructed to add these scripts yourself. You can also add more scripts to this list manually for any commands you use frequently.
 
 ```json title="package.json"
 {
@@ -96,7 +101,7 @@ The following scripts for the most common commands (`astro dev`, `astro build`, 
 }
 ```
 
-You will often use these common commands without any flags. But, for example, you may wish to start the development server on a different port, or build your site including draft pages. You can combine these scripts (which run `astro` commands) with an appropriate flag for more options:
+You will often use these `astro` commands, or scripts that run them, without any flags. Use flags when you want to customize the command's behavior. For example, you may wish to start the development server on a different port, or build your site including draft pages. 
 
 <PackageManagerTabs>
   <Fragment slot="npm">
