Remove layout prop

--- a/src/content/docs/fr/guides/deploy/buddy.mdx
+++ b/src/content/docs/fr/guides/deploy/buddy.mdx
@@ -1,7 +1,7 @@
 ---
 title: Déployez votre site Astro avec Buddy
 description: Comment déployer votre site Astro sur le web en utilisant Buddy.
-layout: ~/layouts/DeployGuideLayout.astro
+type: deploy
 i18nReady: true
 ---
 
