docs: add testing guide for cypress

--- a/src/content/docs/en/guides/testing.mdx
+++ b/src/content/docs/en/guides/testing.mdx
@@ -6,7 +6,7 @@ i18nReady: true
 import PackageManagerTabs from '~/components/tabs/PackageManagerTabs.astro'
 
 
-Testing helps you write and maintain working Astro code. Astro supports many popular tools for unit tests, component tests, and end-to-end tests including Jest, Mocha, Jasmine, Cypress and Playwright. You can even install framework-specific testing libraries such as React Testing Library to test your UI framework components.
+Testing helps you write and maintain working Astro code. Astro supports many popular tools for unit tests, component tests, and end-to-end tests including Jest, Mocha, Jasmine, [Cypress](#cypress) and [Playwright](#playwright). You can even install framework-specific testing libraries such as React Testing Library to test your UI framework components.
 
 Testing frameworks allow you to state **assertions** or **expectations** about how your code should behave in specific situations, then compare these to the actual behavior of your current code. 
 
@@ -15,6 +15,115 @@ Testing frameworks allow you to state **assertions** or **expectations** about h
 A Vite-native unit test framework with ESM, TypeScript and JSX support powered by esbuild.
 
 See the [Astro + Vitest starter template](https://github.com/withastro/astro/tree/latest/examples/with-vitest) on GitHub.
+
+## Cypress
+
+Cypress is a next generation front end testing tool built for the modern web. Cypress enables you to write all types of tests:
+
+* End-to-end tests
+* Component tests
+* Integration tests
+* Unit tests
+
+Cypress can test anything that runs in a browser.
+
+### Installation
+
+You can install Cypress within your Astro project using the package manager of your choice.
+
+<PackageManagerTabs>
+  <Fragment slot="npm">
+  ```shell
+  npm install -D cypress
+  ```
+
+  This will install Cypress locally as a dev dependency for your project.
+  </Fragment>
+  <Fragment slot="pnpm">
+  ```shell
+  pnpm add cypress --save-dev
+  ```
+  </Fragment>
+  <Fragment slot="yarn">
+  ```shell
+  yarn add cypress --dev
+  ```
+  </Fragment>
+</PackageManagerTabs>
+
+### Configuration
+
+In the root of your project, create a `cypress.config.ts` file with the following content:
+
+```json
+import { defineConfig } from 'cypress'
+
+export default defineConfig({
+  e2e: {
+    supportFile: false
+  },
+})
+```
+
+### Create your first Cypress test
+
+1. Choose a page to test. We will use the example `index.astro` page below.
+
+    ```html title="src/pages/index.astro"
+    ---
+    ---
+    <html lang="en">
+      <head>
+        <title>Astro is awesome!</title>
+        <meta name="description" content="Pull content from anywhere and serve it fast with Astro's next-gen island architecture." />
+      </head>
+      <body>
+      <h1>Hello world from Astro</h1>
+      </body>
+    </html>
+    ```
+
+2. Create an `index.spec.js` file in the `cypress/e2e` folder. Copy and paste the following test into the file to verify that the page title is correct. Update the value of the page `<title>` to match the page you are testing. 
+
+    ```js title="cypress/e2e/index.cy.ts"
+    it('titles are correct', () => {
+      const page = cy.visit('http://localhost:3000');
+
+      page.get('title').should('have.text', 'Astro is awesome!')
+      page.get('h1').should('have.text', 'Hello world from Astro');
+    });
+    ```
+
+    :::tip[set a baseUrl]
+    You can set [`"baseUrl": "http://localhost:3000"`](https://docs.cypress.io/guides/end-to-end-testing/testing-your-app#Step-3-Configure-Cypress) in the `cypress.config.ts` configuration file to use `cy.visit("/")` instead of `page.goto("http://localhost:3000/")` for a more convenient URL.
+    :::
+
+### Running your Cypress tests
+
+You can run a single test or several tests at once, testing one or multiple browsers. By default, Cypress uses a built-in instance of [Electron](https://www.electronjs.org/) to run your tests, and it also [supports](https://docs.cypress.io/guides/guides/launching-browsers) Firefox and Chrome-family browsers (including Edge).
+
+Cypress can be run from the command line or from the Cypress App. The App provides a visual interface for running and debugging your tests.
+
+To run our test from the previous example using the command line, execute the following command:
+
+```shell
+npx cypress run
+```
+
+To run the test using the Cypress App, execute the following command:
+
+```shell
+npx cypress open
+```
+
+Once the Cypress App is launched, choose **E2E Testing**, and the browser that will be used to run tests.
+
+### Next steps
+
+More information about Cypress can be found in the links below:
+
+- [Introduction to Cypress](https://docs.cypress.io/guides/core-concepts/introduction-to-cypress)
+- [Testing Your App](https://docs.cypress.io/guides/end-to-end-testing/testing-your-app) 
 
 ## Playwright
 
@@ -102,7 +211,6 @@ You can also have Playwright start your server when you run your testing script 
 Here is an example of the configuration and commands required when using Yarn:
 
 1. Add a test script to your `package.json` file in the project root, such as `"test:e2e": "playwright test"`. 
-
 2. In `playwright.config.ts`, add the `webServer` object and update the command value to `yarn preview`. 
 
 ```js title="playwright.config.ts" ins={3-8} "yarn preview"
