server-side disclaimer

--- a/src/content/docs/en/guides/typescript.mdx
+++ b/src/content/docs/en/guides/typescript.mdx
@@ -98,6 +98,8 @@ export {};
 
 This will provide typing to `globalThis.myString` and `globalThis.myFunction`, as well as `window.myString` and `window.myFunction`.
 
+Note that `window` is only available in client-side code. `globalThis` is available both server-side and client-side, but its server-side value won't be shared with the client.
+
 If you only want to type a property on the `window` object, provide a `Window` interface instead:
 
 ```ts title="env.d.ts"
