--- a/src/content/docs/en/guides/cms/contentful.mdx
+++ b/src/content/docs/en/guides/cms/contentful.mdx
@@ -323,7 +323,7 @@ const posts = entries.items.map((item) => {
 
 ### Generating individual blog posts
 
-Use the same method to fetch data your data from Contentful as above, but this time, on a page that will create a unique page route for each blog post.
+Use the same method to fetch your data from Contentful as above, but this time, on a page that will create a unique page route for each blog post.
 
 
 #### Static site generation
